Fix spacing on blog post page

--- a/src/scss/components/_blog-post.scss
+++ b/src/scss/components/_blog-post.scss
@@ -1,23 +1,25 @@
 .blog-post {
-    min-height: calc(100vh - 9.3rem - 5rem - 9.3rem - 5rem); // 9.3rem - header & footer. 5rem - footer margin
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+  min-height: calc(
+    100vh - 9.3rem - 5rem - 9.3rem - 3rem
+  ); // 9.3rem - header & footer. 5rem - footer margin
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 
-    &__wrapper {
-        padding: $spacing;
+  &__wrapper {
+    padding: $spacing;
 
-        @include border();
+    @include border();
 
-        @include breakpoint(md) {
-            padding: $spacing-mob;
-        }
+    @include breakpoint(md) {
+      padding: $spacing-mob;
     }
+  }
 
-    &__title {
-        margin-bottom: $spacing;
+  &__title {
+    margin-bottom: $spacing;
 
-        @include breakpoint(md) {
-            margin-bottom: $spacing-mob;
-        }
+    @include breakpoint(md) {
+      margin-bottom: $spacing-mob;
     }
+  }
 }
